--- a/index.html
+++ b/index.html
@@ -1,73 +1,138 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <meta
+      http-equiv="Content-Type"
+      content="text/html; charset=utf-8"
+    />
+    <link
+      rel="stylesheet"
+      href="pages/index.css"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="pages/index.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap"
-        rel="stylesheet">
+    <title>Тестовое задание на позицию Html-верстальщик/стажер</title>
+  </head>
 
-    <title>
-        Тестовое задание на позицию Html-верстальщик/стажер
-    </title>
-</head>
-
-<body>
+  <body>
     <div class="body">
-        <header class="header">
-            <img src="images/logo.svg" alt="Логотип" class="header__logo" width="135" height="30">
-            <div class="search-box">
-                <img src="images/Ellipse.png" alt="Лупа" class="search-box__search-btn">
-                <input class="search-box__search-txt" type="text" name="" placeholder="Найти...">
-            </div>
-            <div class="line">
-            </div>
-            <div class="profile">
-                <h1 class="profile__name">Аксана</h1>
-                <img src="images/Profile_photo.jpg" alt="Фото Аксана" class="profile__photo">
-                <img class="profile__mobile" src="images/Profile.svg">
-            </div>
+      <header class="header">
+        <div class="header__top">
+          <img
+            src="images/logo.svg"
+            alt="Логотип"
+            class="header__logo"
+            width="135"
+            height="30"
+          />
+          <img
+            class="header__profile-mobile"
+            src="images/Profile.svg"
+          />
+        </div>
+        <div class="search-box">
+          <img
+            src="images/search.png"
+            width="16"
+            height="16"
+            alt="Лупа"
+            class="search-box__search-btn"
+          />
+          <input
+            class="search-box__search-txt"
+            type="text"
+            name=""
+            placeholder="Найти..."
+          />
+        </div>
+        <div class="header__sep"></div>
+        <div class="profile">
+          <h1 class="profile__name">Аксана</h1>
+          <img
+            src="images/Profile_photo.jpg"
+            alt="Фото Аксана"
+            class="profile__photo"
+          />
+        </div>
+      </header>
 
+      <main class="partners">
+        <h2 class="partners__h1">наши партнёры</h2>
+        <ul class="partners__logo">
+          <li class="partners__logo__link">
+            <img
+              src="images/logo_1.png"
+              alt="Компания 1"
+              class="partners__logo__photo"
+            />
+          </li>
+          <li class="partners__logo__link">
+            <img
+              src="images/logo_2.png"
+              alt="Компания 2"
+              class="partners__logo__photo"
+            />
+          </li>
+          <li class="partners__logo__link">
+            <img
+              src="images/logo_3.png"
+              alt="Компания 3"
+              class="partners__logo__photo"
+            />
+          </li>
+          <li class="partners__logo__link">
+            <img
+              src="images/logo_4.png"
+              alt="Компания 4"
+              class="partners__logo__photo"
+            />
+          </li>
+          <li class="partners__logo__link">
+            <img
+              src="images/logo_5.png"
+              alt="Компания 5"
+              class="partners__logo__photo"
+            />
+          </li>
+          <li class="partners__logo__link">
+            <img
+              src="images/logo_6.png"
+              alt="Компания 6"
+              class="partners__logo__photo"
+            />
+          </li>
+          <li class="partners__logo__link">
+            <img
+              src="images/logo_7.png"
+              alt="Компания 7"
+              class="partners__logo__photo"
+            />
+          </li>
+        </ul>
+      </main>
 
-
-
-        </header>
-
-        <main class="partners">
-            <h2 class="partners__h1">наши партнёры</h2>
-            <ul class="partners__logo">
-                <li class="partners__logo__link">
-                    <img src="images/logo-1.svg" alt="Компания 1" class="partners__logo__photo">
-                </li>
-                <li class="partners__logo__link">
-                    <img src="images/logo-2.svg" alt="Компания 2" class="partners__logo__photo">
-                </li>
-                <li class="partners__logo__link">
-                    <img src="images/logo-3.svg" alt="Компания 3" class="partners__logo__photo">
-                </li>
-                <li class="partners__logo__link">
-                    <img src="images/logo-4.svg" alt="Компания 4" class="partners__logo__photo">
-                </li>
-                <li class="partners__logo__link">
-                    <img src="images/logo-5.svg" alt="Компания 5" class="partners__logo__photo">
-                </li>
-                <li class="partners__logo__link">
-                    <img src="images/logo-6.svg" alt="Компания 6" class="partners__logo__photo">
-                </li>
-                <li class="partners__logo__link">
-                    <img src="images/logo-7.svg" alt="Компания 7" class="partners__logo__photo">
-                </li>
-
-            </ul>
-
-        </main>
-
-        <footer>
-
-        </footer>
+      <footer></footer>
     </div>
-</body>
-
+  </body>
 </html>
